--- a/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.html
+++ b/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.html
@@ -8,7 +8,7 @@
     <div id="en-tete">
       <h3>
         Heureux de vous revoir
-        <span [ngStyle]="{ color: '#F6C434' }">{{gestionnaire.getUser.nom}}</span><br />
+        <span [ngStyle]="{ color: '#F6C434' }">{{gestionnaire.uriCv}}</span><br />
         Gerer vos projets en toute simplicité
       </h3>
       <img src="/gestionnnairedashboard.png" alt="image" />
