nouvel ajout des composants du porteur de projet

--- a/src/app/components/porteurProjet/proposition-idee-projet/proposition-idee-projet.component.html
+++ b/src/app/components/porteurProjet/proposition-idee-projet/proposition-idee-projet.component.html
@@ -40,7 +40,7 @@
           <input type="file" id="file-upload" (change)="onFileSelected($event)" hidden />
         </div>
 
-        <button (click)="onAfterSubmitSuccess() ">Envoyer</button>
+        <button (click)="onSubmit() ">Envoyer</button>
       </div>
     </div>
   </div>
