--- a/src/app/components/accueil/accueil.component.css
+++ b/src/app/components/accueil/accueil.component.css
@@ -12,7 +12,9 @@
   border: 0.3px solid rgba(0, 0, 0, 0.372);
   border-radius: 20px;
   width: 30%;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5), -2px -2px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5), 0px 0px 5px rgba(0, 0, 0, 0.3);
+  height: 80vh;
+  overflow: hidden;
 }
 
 .header {
@@ -25,19 +27,20 @@
 .body {
   display: flex;
   flex-direction: column;
-  gap: 3%;
+  gap: 1%;
+  overflow-y: scroll;
 }
 .card {
   height: 170px;
   margin: 3%;
   border-radius: 20px;
   border: 0.3px solid rgba(0, 0, 0, 0.372);
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5), -2px -2px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5), 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 .head {
   display: flex;
   flex-direction: row;
-  gap: 30%;
+  gap: 10%;
   align-items: center;
   justify-content: space-between;
   padding-left: 3%;
@@ -45,7 +48,7 @@
 }
 .titre {
   color: #334daa;
-  font-size: 20px;
+  font-size: 16px;
 }
 .content {
   display: flex;
@@ -58,7 +61,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding-top: 70px;
   padding-left: 3%;
   padding-right: 3%;
 }
@@ -82,8 +84,10 @@
   border: 0.3px solid rgba(0, 0, 0, 0.372);
   border-radius: 32px;
   width: 65%;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5), -2px -2px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5), 0px 0px 5px rgba(0, 0, 0, 0.3);
   flex-wrap: wrap;
+  height: 80vh;
+  overflow: hidden;
 }
 .cardProjet {
   height: 260px;
@@ -92,6 +96,7 @@
   border-radius: 32px;
   /* border: 0.3px solid rgba(0, 0, 0, 0.5); */
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5), 0px 0px 5px rgba(0, 0, 0, 0.5);
+  overflow-y: scroll;
 }
 .headCard {
   height: 170px;
@@ -160,4 +165,15 @@
   height: 15px;
   background-color: #334daa;
   border-radius: 32px;
+}
+
+.not {
+  align-items: center;
+  padding: 50px;
+}
+.recom {
+  font-size: 32px;
+  margin-left: 3%;
+  padding-top: 20px;
+  width: 280px;
 }
