--- a/src/app/components/accueil/accueil.component.css
+++ b/src/app/components/accueil/accueil.component.css
@@ -1,6 +1,7 @@
 .contener {
   display: flex;
   flex-direction: row;
+  position: fixed;
   width: 100%;
   height: 100vh;
 }
@@ -11,7 +12,7 @@
   flex-direction: column;
   border: 0.3px solid rgba(0, 0, 0, 0.372);
   border-radius: 20px;
-  width: 30%;
+  width: 50%;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5), 0px 0px 5px rgba(0, 0, 0, 0.3);
   height: 80vh;
   overflow: hidden;
@@ -79,15 +80,28 @@
 
 .projet {
   margin: 3%;
-  display: flex;
-  flex-direction: column;
-  border: 0.3px solid rgba(0, 0, 0, 0.372);
-  border-radius: 32px;
-  width: 65%;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5), 0px 0px 5px rgba(0, 0, 0, 0.3);
-  flex-wrap: wrap;
+  width: 100%;
   height: 80vh;
-  overflow: hidden;
+  overflow-y: scroll;
+  border: 0.3px solid rgba(0, 0, 0, 0.372);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5), 0px 0px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 32px;
+}
+.projetHead.titre {
+  font-size: 40px;
+}
+.entet {
+  width: 100%;
+}
+.corps {
+  margin-top: 3%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  overflow-y: scroll;
+  margin-left: 3%;
+  margin-right: 3%;
 }
 .cardProjet {
   height: 260px;
@@ -96,7 +110,6 @@
   border-radius: 32px;
   /* border: 0.3px solid rgba(0, 0, 0, 0.5); */
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5), 0px 0px 5px rgba(0, 0, 0, 0.5);
-  overflow-y: scroll;
 }
 .headCard {
   height: 170px;
