--- a/src/app/components/projetgestionnairedetail/projetgestionnairedetail.component.html
+++ b/src/app/components/projetgestionnairedetail/projetgestionnairedetail.component.html
@@ -1,15 +1,127 @@
 <div class="main">
-  <div class="side-bar"></div>
-  <div class="content">
-    <div>
-        <div class="etat">
-
-        </div>
-      <div class="gauche"></div>
-      <div class="milieur"></div>
-      <div class="droite"></div>
-    </div>
-    <button>Nouvelle tache</button>
-    <div></div>
+  <div class="lateral-nav" [class.lateral-close]="!sidebarOpen">
+    <app-sidebargestionnaire
+      (AfficherSideBar)="changerEtatSidebar($event)"
+    ></app-sidebargestionnaire>
   </div>
+  <div class="content" [class.long-content]="!sidebarOpen">
+    <div class="indicator">
+      <div class="cercle"></div>
+    </div>
+    
+    <!-- SECTION ÉTAT / EN-TÊTE -->
+    <div class="etat">
+      <div class="gauche">
+        <div class="date-badge">
+          <span class="icon">
+            <i class="ri-calendar-2-line" style="color:#334DAA; font-size: 20px"></i>
+          </span>
+          31/07/2025
+        </div>
+      </div>
+
+      <div class="milieur">
+        <h2 class="titre-page">Gestion des cooperatives Agricoles</h2>
+        <div class="description-card">
+          <p>
+            LoremApp est une plateforme innovante conçue pour optimiser la collaboration entre équipes techniques.
+            Grâce à une interface intuitive et des algorithmes performants, elle permet de centraliser les workflows,
+            automatiser les tâches répétitives et améliorer la productivité.
+          </p>
+        </div>
+      </div>
+
+      <div class="droite">
+        <div class="date-badge">
+          <span class="icon">
+            <i class="ri-calendar-2-line" style="color:#334DAA; font-size: 20px"></i>
+          </span>
+          02/07/2026
+        </div>
+      </div>
+    </div>
+
+
+    <div class="bottom-header">
+      <div class="niveau">
+        Niveau <span style="color: black;">Facile</span>
+      </div>
+      <div class="contributors">
+        <div class="top-line">
+          <i class="ri-group-line" style="font-size: 25px;"></i>
+          <span class="count">12</span>
+        </div>
+        <div class="label">Contributeurs</div>
+      </div>
+    </div>
+
+    <div class="button">
+      <button class="btn-new-task">
+        <i class="ri-add-circle-fill" style="color:#334DAA; font-size: 20px"></i>
+        <span>Nouvelle tache</span>
+      </button>
+    </div>
+
+    <!-- TABLEAU -->
+    <div class="table-container">
+      <div class="table-header">
+        <span>Titre</span>
+        <span>Description</span>
+        <span>Date debut</span>
+        <span>Date fin</span>
+        <span>Pièces</span>
+        <span style="text-align: center;">État</span>
+        <span >Contributeur</span>
+        <span style="text-align: center;">Action</span>
+      </div>
+
+      <!-- LIGNE -->
+      <div class="table-row">
+        <span class="bold">Set up du projet</span>
+        <span>Lien github</span>
+        <span>31/07/2025</span>
+        <span>01/08/2025</span>
+        <span>10</span>
+        <span style="border-radius: 12px;">
+          <span class="etat-badge a-faire">A faire</span>
+        </span>
+        
+        <span class="span-center">👤</span>
+        <span class="span-center">
+          <i class="ri-more-fill"></i>
+        </span>
+        
+      </div>
+
+      <div class="table-row">
+        <span class="bold">Développement de l'API REST</span>
+        <span>Lien github</span>
+        <span>31/07/2025</span>
+        <span>01/08/2025</span>
+        <span>10</span>
+        <span style="border-radius: 12px;">
+          <span class="etat-badge termine">Terminé</span>
+        </span>
+        
+        <span class="span-center">👤</span>
+        <span class="span-center">
+          <i class="ri-more-fill"></i>
+        </span>
+      </div>
+
+      <div class="table-row">
+        <span class="bold">Set up du projet</span>
+        <span>Lien github</span>
+        <span>31/07/2025</span>
+        <span>01/08/2025</span>
+        <span>10</span>
+        <span style="border-radius: 12px;"><span class="etat-badge en-cours">En cours</span></span>
+        <span class="span-center">👤</span>
+        <span class="span-center">
+          <i class="ri-more-fill"></i>
+        </span>
+        
+      </div>
+    </div>
+
 </div>
