--- a/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.html
+++ b/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.html
@@ -1,14 +1,12 @@
 <div id="main">
-  <div class="lateral-nav" [class.lateral-close]="!sidebarOpen">
-    <app-sidebargestionnaire
-      (AfficherSideBar)="changerEtatSidebar($event)"
-    ></app-sidebargestionnaire>
-  </div>
   <div class="dashboard" [class.long-dashboard]="!sidebarOpen">
+
     <div id="en-tete">
       <h3>
         Heureux de vous revoir
-        <span [ngStyle]="{ color: '#F6C434' }">Kadiatou Tall</span><br />
+        <span [ngStyle]="{ color: '#F6C434' }"
+          >{{ user.prenom }} {{ user.nom }}</span
+        ><br />
         Gerer vos projets en toute simplicité
       </h3>
       <img src="/gestionnnairedashboard.png" alt="image" />
@@ -28,23 +26,22 @@
           </div>
         </div>
         <div class="statistiques" [class.decale]="!sidebarOpen">
-  <div class="icon-wrapper">
-    <i class="ri-archive-stack-line"></i>
-  </div>
+          <div class="icon-wrapper">
+            <i class="ri-archive-stack-line"></i>
+          </div>
 
-  <h5>Projets</h5>
+          <h5>Projets</h5>
 
-  <div class="en-cours">
-    <span id="en-cours">5</span>
-    <p>En cours</p>
-  </div>
+          <div class="en-cours">
+            <span id="en-cours">5</span>
+            <p>En cours</p>
+          </div>
 
-  <div class="realises">
-    <hr id="realise" />
-    <p>10 Réalisés</p>
-  </div>
-</div>
-
+          <div class="realises">
+            <hr id="realise" />
+            <p>10 Réalisés</p>
+          </div>
+        </div>
       </div>
 
       <div id="projet-recents">
@@ -91,7 +88,7 @@
               <button id="refuse" (click)="openPopups()">Refusé</button>
             </td>
           </tr>
-          
+
           <tr>
             <td>Blablacar</td>
             <td>Blablacar</td>
@@ -107,7 +104,6 @@
     </div>
   </div>
   @if(ispopupVisible === true){
-    <app-pop-ups (close)="closePopups($event)"></app-pop-ups>
+  <app-pop-ups (close)="closePopups($event)"></app-pop-ups>
   }
-  
 </div>
