--- a/src/app/components/gestionnaire/index-gestionnaire/index-gestionnaire.component.html
+++ b/src/app/components/gestionnaire/index-gestionnaire/index-gestionnaire.component.html
@@ -1,6 +1,5 @@
-
-<p *ngIf="user">Bienvenue a vous Mr/Mm {{user.nom}} <strong>{{user.prenom}}  dans ton espace de travail</strong></p>
-
-<app-header></app-header>
+<app-recherchebarre></app-recherchebarre>
+<app-side-bar></app-side-bar>
+<!-- <app-sidebargestionnaire></app-sidebargestionnaire> -->
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
