add the left sidebar menu

--- a/src/app/components/page-visiteur/page-visiteur.component.css
+++ b/src/app/components/page-visiteur/page-visiteur.component.css
@@ -5,6 +5,7 @@
     width: 100%;
     background-color: #e0dddd;
     position: fixed;
+    margin-top: 60px;
 }
 .colonneGauche{
     display: flex;
