--- a/src/app/components/UI/header/header.component.css
+++ b/src/app/components/UI/header/header.component.css
@@ -3,6 +3,8 @@
   background-color: white;
   border-top: 1px solid #e3f2fd;
   border-bottom: solid #7f7f7f 1px;
+  position: fixed;
+  z-index: 2;
 }
 
 .entete {
