--- a/src/app/components/porteurProjet/liste-idee-projet/liste-idee-projet.component.html
+++ b/src/app/components/porteurProjet/liste-idee-projet/liste-idee-projet.component.html
@@ -1,127 +1,38 @@
-
- <app-recherchebarre></app-recherchebarre>
- <div class="layout">
+<app-recherchebarre></app-recherchebarre>
+<div class="layout">
   <app-side-bar></app-side-bar>
-
   <div class="content">
-   
-
     <div class="main">
       <h1 class="header">
         <i class="ri-lightbulb-line"></i>
         Donner vie à vos idées, Collaborez en toute Sécurité
       </h1>
-
       <div class="cards-grid">
-        <!-- Répète cette structure pour chaque card -->
-        <div class="card">
+        <div class="card" *ngFor="let idee of ideesProjet">
           <div class="card-content">
             <div class="title-section">
-              <h2>Nianaboli</h2>
-              <div class="tag">Collaboration</div>
+              <h2>{{ idee.titre }}</h2>
+              <div class="tag">{{ idee.domaine[0] }}</div>
             </div>
             <p class="description">
-              Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
+              {{ idee.description }}
             </p>
             <div class="publie-voirplus">
-              <div class="publie">Publié : 03/08/2025</div>
+              <div class="publie">Publié : {{ idee.datePublication | date:'dd/MM/yyyy' }}</div>
               <a href="#" class="voirPlus">Voir plus <i class="ri-arrow-right-line"></i></a>
             </div>
             <div class="card-footer">
               <div class="user-info">
                 <img src="logoS.png" alt="User photo">
-                <span>Niakale Diakité</span>
+                <span>{{ idee.utilisateur.prenom }} {{ idee.utilisateur.nom }}</span>
               </div>
               <div class="footer-icons">
-                <span><i class="ri-message-2-line"></i>8</span>
-                <span><i class="ri-heart-3-fill"></i> 235</span>
+                <span><i class="ri-message-2-line"></i>{{ idee.commentaireIdeeProjets.length }}</span>
+                <span><i class="ri-heart-3-fill"></i> {{ idee.nombreSoutien }}</span>
               </div>
             </div>
           </div>
         </div>
-        <!-- Répéter les .card dans .cards-grid -->
-         
-        <!-- Répète cette structure pour chaque card -->
-        <div class="card">
-          <div class="card-content">
-            <div class="title-section">
-              <h2>Nianaboli</h2>
-              <div class="tag">Collaboration</div>
-            </div>
-            <p class="description">
-              Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
-            </p>
-            <div class="publie-voirplus">
-              <div class="publie">Publié : 03/08/2025</div>
-              <a href="#" class="voirPlus">Voir plus <i class="ri-arrow-right-line"></i></a>
-            </div>
-            <div class="card-footer">
-              <div class="user-info">
-                <img src="logoS.png" alt="User photo">
-                <span>Niakale Diakité</span>
-              </div>
-              <div class="footer-icons">
-                <span><i class="ri-message-2-line"></i>8</span>
-                <span><i class="ri-heart-3-fill"></i> 235</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Répéter les .card dans .cards-grid -->
-         <!-- Répète cette structure pour chaque card -->
-        <div class="card">
-          <div class="card-content">
-            <div class="title-section">
-              <h2>Nianaboli</h2>
-              <div class="tag">Collaboration</div>
-            </div>
-            <p class="description">
-              Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
-            </p>
-            <div class="publie-voirplus">
-              <div class="publie">Publié : 03/08/2025</div>
-              <a href="#" class="voirPlus">Voir plus <i class="ri-arrow-right-line"></i></a>
-            </div>
-            <div class="card-footer">
-              <div class="user-info">
-                <img src="logoS.png" alt="User photo">
-                <span>Niakale Diakité</span>
-              </div>
-              <div class="footer-icons">
-                <span><i class="ri-message-2-line"></i>8</span>
-                <span><i class="ri-heart-3-fill"></i> 235</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Répéter les .card dans .cards-grid -->
-         <!-- Répète cette structure pour chaque card -->
-        <div class="card">
-          <div class="card-content">
-            <div class="title-section">
-              <h2>Nianaboli</h2>
-              <div class="tag">Collaboration</div>
-            </div>
-            <p class="description">
-              Nianaboli est une application console conçue pour permettre aux utilisateurs de gérer et de partager
-            </p>
-            <div class="publie-voirplus">
-              <div class="publie">Publié : 03/08/2025</div>
-              <a href="#" class="voirPlus">Voir plus <i class="ri-arrow-right-line"></i></a>
-            </div>
-            <div class="card-footer">
-              <div class="user-info">
-                <img src="logoS.png" alt="User photo">
-                <span>Niakale Diakité</span>
-              </div>
-              <div class="footer-icons">
-                <span><i class="ri-message-2-line"></i>8</span>
-                <span><i class="ri-heart-3-fill"></i> 235</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Répéter les .card dans .cards-grid -->
       </div>
     </div>
   </div>
