data binding dashboard terminé à 95%, reste à tester et corriger

--- a/src/app/components/UI/cardcontribution/cardcontribution.component.html
+++ b/src/app/components/UI/cardcontribution/cardcontribution.component.html
@@ -1,13 +1,13 @@
 <div class="card">
     <div id="left">
         <p>
-            Projet: Collabdev
+            Projet: {{contribution.nomProjet}}
         </p>
         <p>
-            Contributeur: Mohamed
+            Contributeur: {{contribution.prenomContributeur}} {{contribution.nomContributeur}}
         </p>
         <p>
-            Tache: Creer base de données
+            Tache: {{contribution.nomTache}}
         </p>
     </div>
     <div id="right">
