--- a/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.html
+++ b/src/app/components/dashboard-gestionnaire/dashboard-gestionnaire.component.html
@@ -23,8 +23,10 @@
           </span>
 
           <div class="contribution-list">
-            <app-cardcontribution />
-            <app-cardcontribution />
+            @for (contributions of contributionsList; track $index) {
+              <app-cardcontribution [contribution]="contributions"/>
+            }
+            
           </div>
         </div>
         <div class="statistiques" [class.decale]="!sidebarOpen">
@@ -89,8 +91,8 @@
                 <td>{{demande.dateEnvoi}}</td>
                 <td>{{demande.profileContributeur}}</td>
                 <td class="actions">
-                  <button id="accepte" (click)="openPopups()">Accepté</button>
-                  <button id="refuse" (click)="openPopups()">Refusé</button>
+                  <button id="accepte" (click)="openPopups('accept',demande)">Accepté</button>
+                  <button id="refuse" (click)="openPopups('decline',demande)">Refusé</button>
                 </td>
               }
             }
