--- a/src/app/components/contributeurs1/contributeurs1.component.html
+++ b/src/app/components/contributeurs1/contributeurs1.component.html
@@ -92,8 +92,8 @@
  
 <aside class="droite">
   <div class="bloc-droite">
-    <h2 class="slogan">
-      Votre vision, notre Collaboration, un succès partagé .
+    <h2 class="slogan" style="font-size: 24px;">
+      <em>Votre vision, notre Collaboration, un <br> succès partagé .</em>
     </h2>
 
      
