--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -1,3 +1,5 @@
+<app-side-bar></app-side-bar>
+<app-header></app-header>
 <app-footer></app-footer>
 <div class="project-tasks-container">
   <header class="tasks-header">
