intégration des données à la page details projet

--- a/src/app/components/UI/cardprojet/cardprojet.component.html
+++ b/src/app/components/UI/cardprojet/cardprojet.component.html
@@ -14,6 +14,6 @@
   <div class="level">{{projet.niveauDAcces}}</div>
   <div class="bas">
     <i class="ri-account-circle-line" style="color: #334DAA; font-size: 25px;"></i>
-    <button class="visualiser-btn" (click)="voirdetails(projet)">Visualiser</button>
+    <button class="visualiser-btn" (click)="voirdetail(projet)">Visualiser</button>
   </div>
 </div>
