implementation du page mes projets pour le contributeurs

--- a/src/app/components/contributeurs1/contributeurs1.component.html
+++ b/src/app/components/contributeurs1/contributeurs1.component.html
@@ -5,7 +5,7 @@
 
  
 <aside class="gauche">
-   Barre de menu sous le header 
+   
   <div class="en-tete">
     <div class="ideeprojet">
       <i class="ri-lightbulb-flash-line" style="font-size: 20px;"></i>
@@ -92,8 +92,9 @@
  
 <aside class="droite">
   <div class="bloc-droite">
-    < h2 class="slogan" style= "font-size: 24px;" >
-      <em>Votre vision, notre Collaboration, un <br> succès partagé .</em>
+    <h2 class="slogan">
+      Votre vision, notre <br> Collaboration, un <br> succès partagé .
+      
     </h2>
 
      
