--- a/src/app/components/contributeurs1/contributeurs1.component.css
+++ b/src/app/components/contributeurs1/contributeurs1.component.css
@@ -73,7 +73,7 @@ app-side-bar{
   border:1px solid #e6e8ee;
   border-radius:8px;
   z-index:900; 
-  margin: 16px 0 0; 
+  margin: 16px 0 40px 0; 
   width:96%; 
   box-sizing:border-box;
 }
@@ -90,14 +90,14 @@ app-side-bar{
 { background:#334daa; 
   color:#fff;
   padding:4px 10px; 
-  border-radius:999px; }
+  }
 
 .projet span,
 .gestionnaire span
 { background:#6b7280;
    color:#fff;
    padding:4px 10px;
-   border-radius:999px; }
+   }
 
 /* Contenu central) */
 .contenu{
@@ -201,6 +201,7 @@ app-side-bar{
   font-size:24px;
   line-height:1.25;
   font-weight:700;
+  font-family: itim;
  }
 .illustration{
   border:2px solid #e6e8ee;
